--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SimpleWebRTC Demo</title>
+        <title>RiiF Call Demo</title>
     </head>
     <body>
         <h1 id="title">Start a room</h1>
