--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div id="localVolume" class="volume_bar"></div>
         </div>
         <div id="remotes"></div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script src="socket.io.js"></script>
-        <script src="simplewebrtc.bundle.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="http://107.170.100.135:8001/socket.io.js"></script>
+        <script src="http://107.170.100.135:8001/simplewebrtc.bundle.js"></script>
         <script>
             // grab the room from the URL
             var room = location.search && location.search.split('?')[1];
