--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     }
 </style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="socket.io.js"></script> <!--http://107.170.100.135:8001/-->
-<script src="simplewebrtc.bundle.js"></script>
+<script src="http://107.170.100.135:8001/socket.io.js"></script> <!--http://107.170.100.135:8001/-->
+<script src="http://107.170.100.135:8001/simplewebrtc.bundle.js"></script>
 <!--<script src="jquery.touchwipe.1.1.1.js"></script>-->
 <script src="http://labs.rampinteractive.co.uk/touchSwipe/jquery.touchSwipe.min.js"></script>
 <script type="text/javascript">
